--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
+    "@babel/generator": "^7.28.5",
+    "@babel/parser": "^7.28.5",
     "@eslint/js": "^9.36.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
